parser/src/parser/expressions/snapshots/tests__parser::expressions::block::tests::parse_free_block.snap
---
created: "2020-05-06T10:43:11.485437300Z"
creator: insta@0.8.2
source: parser/src/parser/expressions/block.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 14)
  FN_DEF@[0; 14)
    FN_KW@[0; 2) "fn"
    WHITESPACE@[2; 3) " "
    NAME@[3; 7)
      IDENT@[3; 7) "main"
    PARAM_LIST@[7; 9)
      L_PAREN@[7; 8) "("
      R_PAREN@[8; 9) ")"
    WHITESPACE@[9; 10) " "
    BLOCK_EXPR@[10; 14)
      BLOCK@[10; 14)
        L_CURLY@[10; 11) "{"
        EXPR_STMT@[11; 13)
          BLOCK_EXPR@[11; 13)
            BLOCK@[11; 13)
              L_CURLY@[11; 12) "{"
              R_CURLY@[12; 13) "}"
        R_CURLY@[13; 14) "}"

