parser/src/parser/expressions/snapshots/tests__parser::expressions::break_expr::tests::parse_break_expr.snap
---
created: "2020-05-06T10:43:11.495753700Z"
creator: insta@0.8.2
source: parser/src/parser/expressions/break_expr.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 18)
  FN_DEF@[0; 18)
    FN_KW@[0; 2) "fn"
    WHITESPACE@[2; 3) " "
    NAME@[3; 7)
      IDENT@[3; 7) "main"
    PARAM_LIST@[7; 9)
      L_PAREN@[7; 8) "("
      R_PAREN@[8; 9) ")"
    WHITESPACE@[9; 10) " "
    BLOCK_EXPR@[10; 18)
      BLOCK@[10; 18)
        L_CURLY@[10; 11) "{"
        EXPR_STMT@[11; 16)
          BREAK_EXPR@[11; 16)
            BREAK_KW@[11; 16) "break"
        SEMI@[16; 17) ";"
        R_CURLY@[17; 18) "}"

